# AccessCheck

./: .gitignore  Builder Sort(root).xlsm  Builder Sort.xlsm  main.py  pyproject.toml
app/: app.py
bot/: __init__.py  pdf_processer.py  share_point.py  web_access.py
